--- a/widgets/months.html
+++ b/widgets/months.html
@@ -41,18 +41,6 @@ title: Age in Months, Weeks, & Days
       months + " months " + mWeeks + mWeeksLabel + mDays + mDaysLabel + " old";
   }, 1000);
 </script>
-<div
-  style="
-    text-align: center;
-    @media (prefers-color-scheme: dark) {
-      background: #303437;
-      color: #eaebeb;
-    }
-    @media (prefers-color-scheme: light) {
-      background: #fff;
-      color: #373530;
-    } ;
-  "
->
+<div style="text-align: center; background: pink">
   <p id="ageInMonths"></p>
 </div>
