--- a/widgets/months.html
+++ b/widgets/months.html
@@ -41,6 +41,6 @@ title: Age in Months, Weeks, & Days
       months + " months " + mWeeks + mWeeksLabel + mDays + mDaysLabel + " old";
   }, 1000);
 </script>
-<div style="text-align: center; background-color: pink">
+<div style="text-align: center">
   <p id="ageInMonths"></p>
 </div>
