--- a/widgets/weeks.html
+++ b/widgets/weeks.html
@@ -32,6 +32,15 @@ title: Age in Weeks & Days
       weeks + " weeks " + days + daysLabel + " old";
   }, 1000);
 </script>
-<div style="text-align: center">
+<style>
+  #timer {
+    text-align: center;
+    text-transform: uppercase;
+    font-family: "Lato", sans-serif;
+    font-size: 0.8em;
+    letter-spacing: 5px;
+  }
+</style>
+<div id="timer">
   <p id="ageInWeeks"></p>
 </div>
