transparent body background

--- a/widgets/weeks.html
+++ b/widgets/weeks.html
@@ -33,6 +33,9 @@ title: Age in Weeks & Days
   }, 1000);
 </script>
 <style>
+  body {
+    background-color: transparent;
+  }
   #timer {
     text-align: center;
     text-transform: uppercase;
