--- a/widgets/weeks.html
+++ b/widgets/weeks.html
@@ -34,7 +34,7 @@ title: Age in Weeks & Days
 </script>
 <style>
   body {
-    background-color: transparent;
+    background-color: aqua;
   }
   #timer {
     text-align: center;
