--- a/widgets/months.html
+++ b/widgets/months.html
@@ -42,14 +42,22 @@ title: Age in Months, Weeks, & Days
   }, 1000);
 </script>
 <style>
+  body {
+    background-color: #fff;
+    color: #373530;
+  }
+  .dark {
+    background-color: #303437;
+    color: #eaebeb;
+  }
   #timer {
-    text-align: center;
-    text-transform: uppercase;
-    font-family: "Lato", sans-serif;
-    font-size: 0.8em;
-    letter-spacing: 5px;
+    text-transform: capitalize;
+    font-family: -apple-system, BlinkMacSystemFont, sans-serif;
+    /* font-size: 1em; */
   }
 </style>
-<div id="timer">
-  <p id="ageInMonths"></p>
-</div>
+<body onclick="{document.body.classList.toggle('dark')}">
+  <div id="timer">
+    <p id="ageInMonths"></p>
+  </div>
+</body>
