--- a/widgets/weeks.html
+++ b/widgets/weeks.html
@@ -29,21 +29,26 @@ title: Age in Weeks & Days
 
     // Output the result in an element with id="ageInWeeks"
     document.getElementById("ageInWeeks").innerHTML =
-      weeks + " weeks " + days + daysLabel + " old";
+      weeks + " weeks " + days + daysLabel;
   }, 1000);
 </script>
 <style>
   body {
-    background-color: transparent;
+    background-color: #fff;
+    color: #373530;
+  }
+  .dark {
+    background-color: #303437;
+    color: #eaebeb;
   }
   #timer {
-    text-align: center;
-    text-transform: uppercase;
-    font-family: "Lato", sans-serif;
-    font-size: 0.8em;
-    letter-spacing: 5px;
+    text-transform: capitalize;
+    font-family: -apple-system, BlinkMacSystemFont, sans-serif;
+    /* font-size: 1em; */
   }
 </style>
-<div id="timer">
-  <p id="ageInWeeks"></p>
-</div>
+<body onclick="{document.body.classList.toggle('dark')}">
+  <div id="timer">
+    <p id="ageInWeeks"></p>
+  </div>
+</body>
