--- a/widgets/months.html
+++ b/widgets/months.html
@@ -1,5 +1,6 @@
 ---
 title: Age in Months, Weeks, & Days
+description: Displays the time in months, weeks, and days since March 9th, 2021
 ---
 
 <script>
