--- a/widgets/test.html
+++ b/widgets/test.html
@@ -1,5 +1,6 @@
 ---
 title: Test Colorful Countdown
+description: Copied from somewhere on GitHub, I've since forgotten where
 ---
 <!DOCTYPE html>
 <html lang="en">
