--- a/widgets/countupV3.html
+++ b/widgets/countupV3.html
@@ -7,21 +7,21 @@ description: Displays the time since March 9th, 2021. A single tap/click toggles
   <script>
     var birthday = new Date(2021, 2, 9);
     var now = new Date();
-    // Find the distance between now an the count down date
+    // Find the distance between now and the count down date
     var age = now - birthday;
 
+    // Time variables
+    var daysInAYear = 1000 * 60 * 60 * 24 * 365;
+    var daysInAMonth = 1000 * 60 * 60 * 24 * 30;
+    var weeksInAMonth = 1000 * 60 * 60 * 24 * 7 * 4;
+    var daysInAWeek = 1000 * 60 * 60 * 24 * 7;
+    var hoursInADay = 1000 * 60 * 60 * 24;
+
     // Time calculations for months, weeks, and days
-    var years = Math.floor(age / (1000 * 60 * 60 * 24 * 7 * 4 * 12));
-    // var months = Math.floor(age / (1000 * 60 * 60 * 24 * 7 * 4));
-    var months = Math.floor(
-      (age % (1000 * 60 * 60 * 24 * 7 * 4 * 12)) / (1000 * 60 * 60 * 24 * 7 * 4)
-    );
-    var weeks = Math.floor(
-      (age % (1000 * 60 * 60 * 24 * 7 * 4)) / (1000 * 60 * 60 * 24 * 7)
-    );
-    var days = Math.floor(
-      (age % (1000 * 60 * 60 * 24 * 7)) / (1000 * 60 * 60 * 24)
-    );
+    var years = Math.floor(age / daysInAYear);
+    var months = Math.floor((age % daysInAYear) / weeksInAMonth);
+    var weeks = Math.floor((age % weeksInAMonth) / daysInAWeek);
+    var days = Math.floor((age % daysInAWeek) / hoursInADay);
 
     // Label calculations
     var yearsLabel;
