--- a/widgets/countupV3.html
+++ b/widgets/countupV3.html
@@ -1,6 +1,6 @@
 ---
 title: Age in Years, Months, Weeks, and Days
-description: Displays the time since March 9th, 2021. A single tap/click toggles dark mode.
+description: Displays the time since March 9th, 2021. A single tap/click switches between showing the time in weeks/days and months/weeks/days and a double tap/click toggles dark mode.
 ---
 
 <head>
@@ -19,8 +19,8 @@ description: Displays the time since March 9th, 2021. A single tap/click toggles
 
     // Time calculations for months, weeks, and days
     var years = Math.floor(age / daysInAYear);
-    var months = Math.floor((age % daysInAYear) / weeksInAMonth);
-    var weeks = Math.floor((age % weeksInAMonth) / daysInAWeek);
+    var months = Math.floor((age % daysInAYear) / daysInAMonth);
+    var weeks = Math.floor((age % daysInAMonth) / daysInAWeek);
     var days = Math.floor((age % daysInAWeek) / hoursInADay);
 
     // Label calculations
@@ -60,10 +60,17 @@ description: Displays the time since March 9th, 2021. A single tap/click toggles
       days +
       daysLabel;
 
-    document.getElementById("age").innerHTML = totalAge;
+    var shortAge = years + yearsLabel + months + monthsLabel;
 
-    function updateAgeDisplay() {
-      document.getElementById("age").innerHTML = totalAge;
+    document.getElementById("age").innerHTML = shortAge;
+
+    function toggleAgeDisplay() {
+      var x = document.getElementById("age");
+      if (x.innerHTML === shortAge) {
+        x.innerHTML = totalAge;
+      } else {
+        x.innerHTML = shortAge;
+      }
     }
   </script>
   <style>
@@ -83,8 +90,9 @@ description: Displays the time since March 9th, 2021. A single tap/click toggles
   </style>
 </head>
 <body
-  onload="{updateAgeDisplay()}"
-  onclick="{document.body.classList.toggle('dark')}"
+  onload="{toggleAgeDisplay()}"
+  onclick="{toggleAgeDisplay()}"
+  ondblclick="{document.body.classList.toggle('dark')}"
 >
   <div id="container">
     <p id="age"></p>
