--- a/widgets/countupV3.html
+++ b/widgets/countupV3.html
@@ -1,6 +1,6 @@
 ---
 title: Age in Years, Months, Weeks, and Days
-description: Displays the time since March 9th, 2021. A single tap/click switches between showing the time in weeks/days and months/weeks/days and a double tap/click toggles dark mode.
+description: Displays the time since March 9th, 2021. A single tap/click switches between showing the time in years/months and years/months/weeks/days and a double tap/click toggles dark mode.
 ---
 
 <head>
